# linkloom

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  models.py  schema_migrations.py
app/api/: __init__.py  routes.py
app/auth/: routes.py
app/jobs/: scheduler.py
app/services/: bookmark_import.py  common.py  content.py  dead_link_jobs.py  import_jobs.py  internal_links.py  search.py  security.py  sync.py  sync_enrichment_jobs.py
app/web/: __init__.py  routes.py
extension/chrome/: README.md  background.js  manifest.json  options.html  options.js  package-release.sh  popup.html  popup.js
extension/firefox/: README.md  background.js  manifest.json  options.html  options.js  package-release.sh  popup.js
templates/: admin_users.html  base.html  bookmark_form.html  bookmarks.html  bootstrap.html  dashboard.html  dead_links.html  folders.html  import.html  login.html  recycle_bin.html  search.html  tokens.html
tests/: conftest.py  test_bookmark_import.py  test_core_flows.py  test_search_service.py
